# picoplay

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
embassy_lab_utils/: Cargo.toml
res/: convert_to_raw  player1.raw  player2.raw
simulator/: Cargo.toml  log.txt
simulator/src/: main.rs
src/: irqs.rs  main.rs
